--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "dayjs": "^1.11.13"
+    "dayjs": "^1.11.13",
+    "socket.io": "^4.8.3",
+    "socket.io-client": "^4.8.3"
   }
 }
